[gd_scene load_steps=12 format=2]

[ext_resource path="res://Misc/Fonts/SquarleyEdited.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Misc/Circle.png" type="Texture" id=2]
[ext_resource path="res://Player/Scissors.tscn" type="PackedScene" id=3]
[ext_resource path="res://Misc/Fonts/Squarely.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Screens/OnlinePlay/PlayerStats.gd" type="Script" id=5]

[sub_resource type="StyleBoxEmpty" id=30]

[sub_resource type="DynamicFont" id=31]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=26]
default_font = SubResource( 31 )
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.941176, 0.941176, 0.941176, 1 )
Button/colors/font_color_hover = Color( 1, 0.74902, 0, 1 )
Button/colors/font_color_pressed = Color( 1, 0.74902, 0, 1 )
Button/constants/hseparation = 2
Button/styles/disabled = SubResource( 30 )
Button/styles/focus = SubResource( 30 )
Button/styles/hover = SubResource( 30 )
Button/styles/normal = SubResource( 30 )
Button/styles/pressed = SubResource( 30 )

[sub_resource type="DynamicFont" id=27]
size = 80
extra_spacing_top = -10
extra_spacing_bottom = -20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=28]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=29]
size = 24
font_data = ExtResource( 4 )

[node name="PlayerStats" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 26 )
script = ExtResource( 5 )

[node name="Stats" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Stats"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Stats/VBoxContainer"]
margin_right = 608.0
margin_bottom = 294.0
size_flags_vertical = 3
custom_constants/separation = 0
alignment = 1

[node name="Username" type="Label" parent="Stats/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 56.0
margin_right = 608.0
margin_bottom = 90.0
size_flags_vertical = 6
text = "username"
align = 1
valign = 1
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="Stats/VBoxContainer/VBoxContainer"]
margin_top = 147.0
margin_right = 608.0
margin_bottom = 228.0
size_flags_vertical = 2
custom_constants/separation = 30
alignment = 1

[node name="CurrentRank" type="VBoxContainer" parent="Stats/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 92.0
margin_right = 179.0
margin_bottom = 81.0
size_flags_horizontal = 4
custom_constants/separation = 0
alignment = 1

[node name="CurrentRank" type="Label" parent="Stats/VBoxContainer/VBoxContainer/HBoxContainer/CurrentRank"]
unique_name_in_owner = true
margin_right = 87.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 27 )
text = "100"
align = 1
valign = 1
uppercase = true

[node name="Label" type="Label" parent="Stats/VBoxContainer/VBoxContainer/HBoxContainer/CurrentRank"]
margin_top = 55.0
margin_right = 87.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 28 )
text = "rank"
align = 1
valign = 1
uppercase = true

[node name="HighestRank" type="VBoxContainer" parent="Stats/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 209.0
margin_right = 296.0
margin_bottom = 81.0
size_flags_horizontal = 4
custom_constants/separation = 0
alignment = 1

[node name="HighestRank" type="Label" parent="Stats/VBoxContainer/VBoxContainer/HBoxContainer/HighestRank"]
unique_name_in_owner = true
margin_right = 87.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 27 )
text = "100"
align = 1
valign = 1
uppercase = true

[node name="Label" type="Label" parent="Stats/VBoxContainer/VBoxContainer/HBoxContainer/HighestRank"]
margin_top = 55.0
margin_right = 87.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 28 )
text = "HIGHEST"
align = 1
valign = 1
uppercase = true

[node name="GamesPlayed" type="VBoxContainer" parent="Stats/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 326.0
margin_right = 413.0
margin_bottom = 81.0
size_flags_horizontal = 4
custom_constants/separation = 0
alignment = 1

[node name="GamesPlayed" type="Label" parent="Stats/VBoxContainer/VBoxContainer/HBoxContainer/GamesPlayed"]
unique_name_in_owner = true
margin_right = 87.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 27 )
text = "100"
align = 1
valign = 1
uppercase = true

[node name="Label" type="Label" parent="Stats/VBoxContainer/VBoxContainer/HBoxContainer/GamesPlayed"]
margin_top = 55.0
margin_right = 87.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 28 )
text = "PLAYED"
align = 1
valign = 1
uppercase = true

[node name="WinRate" type="VBoxContainer" parent="Stats/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 443.0
margin_right = 515.0
margin_bottom = 81.0
size_flags_horizontal = 4
custom_constants/separation = 0
alignment = 1

[node name="Winrate" type="Label" parent="Stats/VBoxContainer/VBoxContainer/HBoxContainer/WinRate"]
unique_name_in_owner = true
margin_right = 72.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 27 )
text = "50"
align = 1
valign = 1
uppercase = true

[node name="Label" type="Label" parent="Stats/VBoxContainer/VBoxContainer/HBoxContainer/WinRate"]
margin_top = 55.0
margin_right = 72.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 28 )
text = "WINRATE"
align = 1
valign = 1
uppercase = true

[node name="Complex" type="HBoxContainer" parent="Stats/VBoxContainer"]
margin_top = 314.0
margin_right = 608.0
margin_bottom = 608.0
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Stats/VBoxContainer/Complex"]
margin_top = 69.0
margin_right = 189.0
margin_bottom = 224.0
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Stats/VBoxContainer/Complex/HBoxContainer"]
margin_left = 44.0
margin_right = 145.0
margin_bottom = 155.0

[node name="TypeDistro" type="TextureProgress" parent="Stats/VBoxContainer/Complex/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 101.0
margin_bottom = 101.0
max_value = 1.0
step = 0.001
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 2 )
fill_mode = 4
tint_under = Color( 0.137255, 0.137255, 0.137255, 1 )

[node name="CenterContainer" type="CenterContainer" parent="Stats/VBoxContainer/Complex/HBoxContainer/VBoxContainer"]
margin_top = 105.0
margin_right = 101.0
margin_bottom = 155.0
rect_min_size = Vector2( 50, 50 )
size_flags_vertical = 3

[node name="Center" type="Control" parent="Stats/VBoxContainer/Complex/HBoxContainer/VBoxContainer/CenterContainer"]
margin_left = 50.0
margin_top = 25.0
margin_right = 50.0
margin_bottom = 25.0

[node name="Spawn" type="Node2D" parent="Stats/VBoxContainer/Complex/HBoxContainer/VBoxContainer/CenterContainer/Center"]
scale = Vector2( 1.5, 1.5 )

[node name="Scissors" parent="Stats/VBoxContainer/Complex/HBoxContainer/VBoxContainer/CenterContainer/Center/Spawn" instance=ExtResource( 3 )]

[node name="HBoxContainer2" type="HBoxContainer" parent="Stats/VBoxContainer/Complex"]
margin_left = 209.0
margin_top = 67.0
margin_right = 398.0
margin_bottom = 227.0
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Stats/VBoxContainer/Complex/HBoxContainer2"]
margin_left = 32.0
margin_right = 157.0
margin_bottom = 160.0
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="Stats/VBoxContainer/Complex/HBoxContainer2/VBoxContainer"]
margin_right = 125.0
margin_bottom = 101.0

[node name="DotParticipation" type="TextureProgress" parent="Stats/VBoxContainer/Complex/HBoxContainer2/VBoxContainer/CenterContainer"]
unique_name_in_owner = true
margin_left = 12.0
margin_right = 113.0
margin_bottom = 101.0
max_value = 1.0
step = 0.001
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 2 )
fill_mode = 4
tint_under = Color( 0.137255, 0.137255, 0.137255, 1 )

[node name="Label" type="Label" parent="Stats/VBoxContainer/Complex/HBoxContainer2/VBoxContainer"]
margin_top = 105.0
margin_right = 125.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 29 )
text = "Dot
Participation"
align = 1
uppercase = true

[node name="HBoxContainer3" type="HBoxContainer" parent="Stats/VBoxContainer/Complex"]
margin_left = 418.0
margin_right = 608.0
margin_bottom = 294.0
size_flags_horizontal = 3
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Stats/VBoxContainer/Complex/HBoxContainer3"]
margin_left = 32.0
margin_top = 67.0
margin_right = 157.0
margin_bottom = 227.0
size_flags_vertical = 4
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="Stats/VBoxContainer/Complex/HBoxContainer3/VBoxContainer"]
margin_right = 125.0
margin_bottom = 101.0

[node name="KillParticipation" type="TextureProgress" parent="Stats/VBoxContainer/Complex/HBoxContainer3/VBoxContainer/CenterContainer"]
margin_left = 12.0
margin_right = 113.0
margin_bottom = 101.0
max_value = 1.0
step = 0.001
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 2 )
fill_mode = 4
tint_under = Color( 0.137255, 0.137255, 0.137255, 1 )

[node name="Label" type="Label" parent="Stats/VBoxContainer/Complex/HBoxContainer3/VBoxContainer"]
margin_top = 105.0
margin_right = 125.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 29 )
text = "Kill
Participation"
align = 1
uppercase = true

[node name="CenterContainer" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="CenterContainer"]
margin_left = 251.0
margin_top = 287.0
margin_right = 357.0
margin_bottom = 321.0
text = "LOADING..."
uppercase = true
